mashallah there's more

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -2005,3 +2005,11 @@ EVTOPTA500203;Depose the Caliph, seize the government! Onwards to Freedom!;;;;;;
 EVTNAME500204;Turkish Rebellion!;;;;;;;;;;;;x
 EVTDESC500204;Caliph's forces have been overwhelmed and the apparatus of the government has been seized by Radical Officers of the Ottoman Army! Caliph has been summarily executed, as well as several of our Russian diplomats caught in Ankara. The Turkish people have been thrown into a nationalist frenzy and rally behind these as they call themselves, Young Turks!;;;;;;;;;;;;;x
 EVTOPTA500204;We must end any notion of their sovereignty, once and for all.;;;;;;;;;;;;x
+EVTNAME500274;Vienna Betrayal Still Stings;;;;;;;;;;;;x
+EVTDESC500274;We cannot be friends with THOSE people.;;;;;;;;;;;;x
+EVTOPTA500274;Break off cordial relations;;;;;;;;;;;;x
+EVTNAME500273;Japan Intervenes;;;;;;;;;;;;x
+EVTDESC500273;The Russian-Japanese rivalry in Korea and Manchuria was a major cause of tension in East Asia during the early 20th century. Both countries had long-established claims to the region, with Russia having a foothold in Manchuria and Japan gaining control over the Korean peninsula in 1895. The two countries fought bitterly over the area, engaging in a series of proxy wars and military interventions, and now we have come head to head, they have declared war on us!;;;;;;;;;;;;;x
+EVTOPTA500273;@RUS will emerge victorious!;;;;;;;;;;;;x
+EVTDESC500272;The Russian-Japanese rivalry in Korea and Manchuria was a major cause of tension in East Asia during the early 20th century. Both countries had long-established claims to the region, with Russia having a foothold in Manchuria and Japan gaining control over the Korean peninsula in 1895. The two countries fought bitterly over the area, engaging in a series of proxy wars and military interventions. Our diplomatic ventures have finally broken off as Russia sent more troops into Manchuria and is planning to annex it, we must either let the arms do the talking or accept Russian Bear domination in China. Qing Government asks us to intervene! If we are to do so, it would certainly not be on their, but our behalf.;;;;;;;;;;;;;x
+EVTNAME500272;Russia invades Manchuria;;;;;;;;;;;;x
