--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -21,6 +21,7 @@ local_government_reform_blocker;Local Government Reform Blocker;;;;;;;;;;;;;x
 native_assimilation_enacted;Native Assimilation Enacted;;;;;;;;;;;;;x
 new_world_nation;New World Nation;;;;;;;;;;;;;x
 pol_reform_blocker;Political Reform Blocker;;;;;;;;;;;;;x
+soc_reform_blocker;Social Reforms Blocked;;;;;;;;;x
 post_colonial_country;Former Colony;;;;;;;;;;;;;x
 PRU_willem_i_alliance;Dutch-Prussian Alliance;;;;;;;;;;;;;x
 russification_of_the_baltic_states;Russification of the Baltic States;;;;;;;;;;;;;x
@@ -47,5 +48,3 @@ treaty_of_paris_1856;Treaty of Paris - Russia lost Crimean War;;;;;;;;;x
 treaty_of_paris_russia;Treaty of Ayvansaray - Russia won the Crimean War;;;;;;;;;x
 the_manifesto;The Manifesto on Unshakable Autocracy;;;;;;;;;x
 tsaralexander2;Tsar Alexander II Reigns;;;;;;;;;x
-social_reform_blocker;Social Reforms Blocked;;;;;;;;;x
-social_reform_blocker;Political Reforms Blocked;;;;;;;;;x
