--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1428,3 +1428,4 @@ prussian_military;Prussian Military;;;;;;;;;;;;;x
 decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
 decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
 caliph_powerless_figurehead;Caliph Powerless Figurhead;;;;;;;;;;;;;x
+border_clashes;Colonist Border Clash;;;;;;;;;;;;;x
