lots of changes

--- a/TGC/localisation/00_events_0100000.csv
+++ b/TGC/localisation/00_events_0100000.csv
@@ -482,10 +482,10 @@ EVTDESC187930;"In the plantation fields of $PROVINCENAME$, the sound of ""The In
 EVTNAME187930;$PROVINCENAME$ Slaves and Marx;;;;;;;;;;;;;x
 EVTOPTA187930;Crack down on these socialist influences.;;;;;;;;;;;;;x
 EVTOPTB187930;Slaves have no political power anyhow.;;;;;;;;;;;;;x
-EVTDESC187935;Factories dot the landscape where once there used to be plantations and farms that ran on the blood and sweat of slaves. In this new $COUNTRY$, though, employers have begun hiring cheap workers, often immigrants, because the cost of keeping slaves has become unsustainable for many. Arguments could be made against them that they are sabotaging the economy, but in a free economy, they have the right to employ whomever they choose.;;;;;;;;;;;;;x
+EVTDESC187935;Modernized industries dot the landscape where once there used to be old plantations and farms that ran on the blood and sweat of slaves. In this new $COUNTRY$, though, employers have begun hiring cheap workers, often immigrants, because the cost of keeping slaves has become unsustainable for many. Arguments could be made against them that they are sabotaging the economy, but in a free economy, they have the right to employ whomever they choose.;;;;;;;;;;;;;x
 EVTNAME187935;Cheap Labour in $PROVINCENAME$!;;;;;;;;;;;;;x
 EVTOPTA187935;Do not interfere in local business.;;;;;;;;;;;;;x
-EVTOPTB187935;Restrict factory hiring quotas.;;;;;;;;;;;;;x
+EVTOPTB187935;Restrict industry hiring quotas.;;;;;;;;;;;;;x
 EVTDESC187940;Two Confederate diplomats, hoping to establish good relations with our country, are aboard the HMS Trent. We have received urgent news lately, however, that the American USS San Jacinto has intercepted the Trent and taken the diplomats as prisoners. This can be seen as an act of war on British territory, and many are calling for an American apology and reparations for this insult.;;;;;;;;;;;;;x
 EVTNAME187940;HMS Trent Captured!;;;;;;;;;;;;;x
 EVTOPTA187940;The United States must answer for this!;;;;;;;;;;;;;x
