--- a/TGC/localisation/00_reforms-movements.csv
+++ b/TGC/localisation/00_reforms-movements.csv
@@ -368,7 +368,7 @@ no_health_care;No Health Care;Aucun système de santé;Keine Gesundheitsfürsorge;;
 no_health_care_desc;The government doesn’t care about healthcare and no funding for it exists. The few health institutions that exist are inherited from medieval times and are equipped accordingly. The medical career is an informal profession, mainly linked to the church. Hospitals use rudimentary lighting, facilities are overcrowded and infectious diseases round the halls and corners of the buildings. Prayers are commonly recommended to treat ailments.;;;;;;;;;;;;;x
 no_health_care_l;No Healthcare;Aucun système de santé;Keine Gesundheitsfürsorge;;;;;;;;;;;x
 no_industrial_construction;No Industrial Construction;;;;;;;;;;;;;x
-no_industrial_construction_desc;No advanced factories.;;;;;;;;;;;;;x
+no_industrial_construction_desc;No advanced industries.;;;;;;;;;;;;;x
 no_land_reform;No Land Reform;;;;;;;;;;;;;x
 no_land_reform_desc;The land is owned and used by the traditional elites in a hereditary way, the way they want, like the old days.;;;;;;;;;;;;;x
 no_meeting;Meetings Not Allowed;;;;;;;;;;;;;x
@@ -625,7 +625,7 @@ yes_foreign_training_desc;Troops trained by foreign military advisors or using f
 yes_foreign_weapons;Imported Weapons;;;;;;;;;;;;;x
 yes_foreign_weapons_desc;This is my BOOMSTICK!;;;;;;;;;;;;;x
 yes_industrial_construction;Industrial Construction;;;;;;;;;;;;;x
-yes_industrial_construction_desc;Foreign advisors assist us in building more advanced factories.;;;;;;;;;;;;;x
+yes_industrial_construction_desc;Foreign advisors assist us in building more advanced industries.;;;;;;;;;;;;;x
 yes_land_reform;Land Reform;;;;;;;;;;;;;x
 yes_land_reform_desc;Redistribution of land rights resulting in more effective farming and mining.;;;;;;;;;;;;;x
 yes_meeting;Meetings Allowed;;;;;;;;;;;;;x
@@ -641,7 +641,7 @@ yes_monetary_reform_l;Official Currencies;;;;;;;;;;;;;x
 yes_naval_schools;Navy Schools;;;;;;;;;;;;;x
 yes_naval_schools_desc;Our naval officers are trained in special naval academies and are taught by foreigners in the arts of naval warfare.;;;;;;;;;;;;;x
 yes_pre_indust;Industrial Progress;;;;;;;;;;;;;x
-yes_pre_indust_desc;Construct some basic factories with the help of foreign advisors. Could this be the beginning of an industrial revolution?;;;;;;;;;;;;;x
+yes_pre_indust_desc;Construct some basic industries with the help of foreign advisors. Could this be the beginning of an industrial revolution?;;;;;;;;;;;;;x
 yes_research_reform;Foreign Universities;;;;;;;;;;;;;x
 yes_research_reform_desc;Universities are built following foreign standards, the professors who teach are usually foreign or graduated in foreign institutions and they teach western philosophy and sciences.;;;;;;;;;;;;;x
 yes_research_reform_l;Foreign Universities;;;;;;;;;;;;;x
