--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -101,7 +101,7 @@ AGRESSION_WAR_LIBERATE_BALKANS_NAME;$ORDER$$FIRST$–$SECOND$ War of the Balkans;;
 AGRESSION_WAR_LIBERATE_NAME;$ORDER$$FIRST$ War of $COUNTRY_ADJ$ Liberation;;$ORDER$$FIRST$-$COUNTRY_ADJ$er Befreiungskrieg;;;;;;;;;;;x
 AGRESSION_WAR_LIBERATE_NAME_ITA_TUR;The Libyan War;;;;;;;;;;;;;x
 AGRESSION_WAR_MONROE_DOCTRINE_NAME;The $ORDER$$FIRST$–$SECOND$ War of Anti–Imperialism;;;;;;;;;;;;;x
-AGRESSION_WAR_GENDARME_OF_EUROPE_NAME;The $ORDER$$FIRST$–$SECOND$ War of Counter-Revolution;;;;;;;;;;;;;x
+AGRESSION_WAR_GENDARME_OF_EUROPE_NAME;The $ORDER$$FIRST$ Counter-Revolutionary Intervention in $SECOND$;;;;;;;;;;;;;x
 AGRESSION_WAR_NAME;$ORDER$War of $FIRST$ Aggression;$ORDER$ Offensive Militaire $FIRST$;$ORDER$ $FIRST$ Angriffskrieg;;;;;;;;;;;x
 AGRESSION_WAR_NAME_COMMUNISM;The $ORDER$$FIRST$–$SECOND$ Revolutionary War;;;;;;;;;;;;;x
 AGRESSION_WAR_NAME_DEMOCRACY;$ORDER$$FIRST$–$SECOND$ Counterrevolution;;;;;;;;;;;;;x
