--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -217,7 +217,7 @@ christino_sympathies_desc;A Christino cell is at work in the province, and is qu
 clerksresist;Counter-Revolution: Clerks;;;;;;;;;;;;;x
 clerksresist_desc;Clerks have locked down stores and banks, and keep the worker in poverty!;;;;;;;;;;;;;x
 collectivisation;Collectivisation;;;;;;;;;;;;;x
-collectivisation_desc;Marxist doctrine emphasized the ‘dictatorship of the proletariat’ whereby the workers would take control of the means of the production and ultimately own their own industries and farms in a utopian socialist vision of collectivism. The architects of Communist state ideology were inevitably unable to deliver this utopian vision. What resulted instead was a dramatic expansion of state economic planning and central control over all industries and industrial production. Housing and infrastructure projects also became state-owned and directed. Heavy industry was to be emphasized above consumer goods. Private ownership of land was largely ended, and early attempts at land redistribution became massive collectivization projects whereby huge farms were organized in a factory-like manner. As with factories, delivery of raw materials and production quotas were set by central planning agencies. In all of these areas, the inherent problems of deficiencies and impossible targets came to the fore.;;;;;;;;;;;;;x
+collectivisation_desc;Marxist doctrine emphasized the ‘dictatorship of the proletariat’ whereby the workers would take control of the means of the production and ultimately own their own factories and farms in a utopian socialist vision of collectivism. The architects of Communist state ideology were inevitably unable to deliver this utopian vision. What resulted instead was a dramatic expansion of state economic planning and central control over all industries and industrial production. Housing and infrastructure projects also became state-owned and directed. Heavy industry was to be emphasized above consumer goods. Private ownership of land was largely ended, and early attempts at land redistribution became massive collectivization projects whereby huge farms were organized in a factory-like manner. As with factories, delivery of raw materials and production quotas were set by central planning agencies. In all of these areas, the inherent problems of deficiencies and impossible targets came to the fore.;;;;;;;;;;;;;x
 collectivisation_modifier;Collectivisation;;;;;;;;;;;;;x
 colonial_administration;Burdened Colonial Administration;;;;;;;;;;;;;x
 colonial_chaos;Colonial Chaos;;;;;;;;;;;;;x
@@ -409,8 +409,8 @@ exploiting_the_land;Exploiting the Land;;;;;;;;;;;;;x
 exploiting_the_land_desc;The time of the Zemene Mesafint is an arduous and perilous time, so all rulers are required to cut costs and take as much money from their population as they can.;;;;;;;;;;;;;x
 extraterritoriality_granted;Extraterritoriality Granted;;;;;;;;;;;;;x
 extraterritoriality_granted_desc;Our country has granted extraterritoriality to citizens of the Great Powers.;;;;;;;;;;;;;x
-factories_nationalized;Nationalized Industries;;;;;;;;;;;;;
-factories_nationalized_desc;Our industries in another country were nationalized. This is a blow to the prestige of our country.;;;;;;;;;;;;;
+factories_nationalized;Nationalized Factories;;;;;;;;;;;;;
+factories_nationalized_desc;Our factories in another country were nationalized. This is a blow to the prestige of our country.;;;;;;;;;;;;;
 fanatic_army;Fanatic Loyalty;;;;;;;;;;;;;x
 fanatic_army_desc;Marked by a high level of discipline and fanaticism, our army is recruiting people from all over our country to fight for our cause. These conscripts firmly believe in our mission and are of an undying loyalty to us.;;;;;;;;;;;;;x
 fascist_welfare;Fascist Welfare;;;;;;;;;;;;;x
@@ -567,7 +567,7 @@ hundred_days_reforms;The Hundred Days Reforms;;;;;;;;;;;;;x
 hundred_days_reforms_desc;The Hundred Days Reforms was a series of reforms undertaken by the young Guangxu Emperor and his reform-minded supporters.;;;;;;;;;;;;;x
 hurricane_cleanup;Hurricane Clean-up;;;;;;;;;;;;;x
 immigrant_workers_csa;Immigrant Workers;;;;;;;;;;;;;x
-immigrant_workers_csa_desc;Industry owners and other employers in this province have been hiring immigrants and other cheap labour, as they cost less than maintaining slaves.;;;;;;;;;;;;;x
+immigrant_workers_csa_desc;Factory and owners and other employers in this province have been hiring immigrants and other cheap labour, as they cost less than maintaining slaves.;;;;;;;;;;;;;x
 immigration_boom_baltic;Ostland Migrations;;;;;;;;;;;;;x
 immunity_from_influenza;Immunity from Influenza;;;;;;;;;;;;;x
 immunity_from_influenza_desc;Prevents Pandemic Influenza from recurring in your country as long as modifier is active.;;;;;;;;;;;;;x
@@ -926,10 +926,8 @@ opened_frontiers;Opened Frontiers;;;;;;;;;;;;;x
 organic_work;Organic Work;;;;;;;;;;;;;x
 organic_work_desc;A movement dedicated to work as a form of resistance operates in this province.;;;;;;;;;;;;;x
 orleans_growth;New Orleans Growing;;;;;;;;;;;;;x
-orthodoxy_autocracy_nationality;Orthodoxy, Autocracy, Nationality!;;;;;;;;;;;;;x
-orthodoxy_autocracy_nationality_desc;The Official Nationality policy is aimed towards Orthodox primacy, safekeeping the absolutism, and loyalty to the Tsar;;;;;;;;;;;;;x
-gendarme_of_europe;Gendarme of Europe;;;;;;;;;;;;;x
-gendarme_of_europe_desc;It is upon us to safeguard the Autocracy of Europe. We have justified Casus Bellis on revolutionary nations!;;;;;;;;;;;;;x
+orthodoxy_autocracy_nationality;Orthodoxy, Autocracy and Nationality!;;;;;;;;;;;;;x
+orthodoxy_autocracy_nationality_desc;The Official Nationality policy entered into effect and it’s speeding up the assimilation of other cultures at the cost of some unrest.;;;;;;;;;;;;;x
 otto_von_bismarck;Otto von Bismarck;;;;;;;;;;;;;x
 otto_von_bismarck_desc;The current Chancellor of our nation, von Bismarck is a remarkable statesman… perhaps one of the finest our nation will ever know.;;;;;;;;;;;;;x
 ottoman_bank;Osmanli Bankasi;;;;;;;;;;;;;x
@@ -1098,10 +1096,6 @@ ruhr_boom_city_desc;Cities all across Germany are growing and changing from rura
 ruhr_boom_desc;Cities all across Germany are growing and changing from rural townships to modern centres of industry thanks to the examples set by the burgeoning Ruhr industrialism.;;;;;;;;;;;;;x
 ruling_party_scandal;National Scandal;;;;;;;;;;;;;x
 ruling_party_scandal_desc;A recent scandal has rocked the government and eroded support for the ruling party.;;;;;;;;;;;;;x
-rus_organic_statute_cpl;Organic Statute of the Kingdom of Poland;;;;;;;;;;;;;x
-rus_organic_statute_cpl_desc;After the failed Rebellion of 1831, the Tsar seized the chance to repeal the liberal 1815 Constitution of our Kingdom and proclaim the conservative Statute in 1832, changing the nominal personal union of Poland and Russia into the "eternally incorporated Kingdom of Poland", curtailing many of our rights and governmental jurisdictions;;;;;;;;;;;;;x
-russian_absolutist_encroachment;Russian Oversight;;;;;;;;;;;;;x
-russian_absolutist_encroachment_desc;Our Petrogradian Overlord is keeping a watchful eye on the Krolestwo affairs.;;;;;;;;;;;;;x
 russian_army_education;Dmitry Milyutin’s Army Reform;;;;;;;;;;;;;x
 russian_army_education_desc;As part of Dmitry Milyutin’s Army Reforms, the system of military education was reformed, and elementary education was made available to all draftees.;;;;;;;;;;;;;x
 russian_protectionism;High Protectionism;;;;;;;;;;;;;
@@ -1404,26 +1398,11 @@ rgo_boycott_modifier_desc;They are refusing to work!;;;;;;;;;;;;;x
 religious_insurrection;Religious Insurrection;;;;;;;;;;;;;x
 religious_insurrection_desc;Locals are rebelling on blind fate!;;;;;;;;;;;;;x
 neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
-bank_timer;Bank cooldown.;;;;;;;;;;;;;x
-univerisity_timer;University cooldown.;;;;;;;;;;;;;x
-bank_timer_desc;A new Bank has been built.;;;;;;;;;;;;;x
-univerisity_timer_desc;A new University has been built.;;;;;;;;;;;;;x
-central_ukraine_modifier;Central Ukrainian Mineral Basin;;;;;;;;;x
-central_ukraine_modifier_desc;The mineral basin, located in the eponymous region, is very rich in coal and other useful minerals.;;;;;;;;;x
-donbass_modifier;The Donbass;;;;;;;;;x
-donbass_modifier_desc;The Donbass, short for Donets Basin, is an area centered around the Donets River. Preliminary explorations have shown that this basin is one of the richest in the world. With billions of tonnes of coal to supply our nation for more the decades to come.;;;;;;;;;x
-polish_revolt;Polish Rebellion;;;;;;;;;x
-polish_revolt_desc;Guerrilla Warfare causes disruption in this area;;;;;;;;;x
 bank_cooldown;Bank cooldown.;;;;;;;;;;;;;x
-university_cooldown;University cooldown.;;;;;;;;;;;;;x
+univerisity_cooldown;University cooldown.;;;;;;;;;;;;;x
 bank_cooldown_desc;A new Bank has been built.;;;;;;;;;;;;;x
+university_coodown_desc;A new University has been built.;;;;;;;;;;;;;x
 lyon_textiles;Lyon Textile Industry;;;;;;;;;;;;;x
 manchester_textiles;Manchester Textile Industry;;;;;;;;;;;;;x
 chinese_silk;Fine Asian Silk;;;;;;;;;;;;;x
 chinese_silk_desc;This province excels at producing high quality silk;;;;;;;;;;;;;x
-university_cooldown_desc;A new University has been built.;;;;;;;;;;;;;x
-austrian_betrayal;Vienna Betrayal;;;;;;;;;;;;;x
-austrian_betrayal_desc;Austria turned their backs on us in Crimean War. We will never forget this.;;;;;;;;;;;;;x
-prussian_military;Prussian Military;;;;;;;;;;;;;x
-decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
-decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
