--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3190,3 +3190,5 @@ reclaim_levants_desc;Even though Anatolia is back in our hands the Turks still h
 reclaim_levants_title;Reclaim the Levant;;;;;;;;;;;;;x
 the_eastern_roman_empire_desc; Our vigil begun with the collapse of the empire, every decade another city fell, every century a province. After the defacto loss of Rome again in 575 the empire grew smaller with each generation. Till it was snuffed out only a hollow memory remained in the hearts of the romans and the halls of power in the west. The Germans and Slavs claimed the mantle. AS IF only under the guiding hand of the Greeks was the Empire Restored to this extend and we will restore the Roman Empire.;;;;;;;;;;;;;x
 the_eastern_roman_empire_title;Our Empire is Restored!;;;;;;;;;;;;;x
+the_pentarchy_desc;With our Empire restored is time to restablish the unity of the universal christian faith. From the catholic scismatics, to the protestant borderline heathens, to the misguided abrahamics, to the unenlightened easterners and southerners.;;;;;;;;;;;;;x
+the_pentarchy_title;The Pentarchy is Restored!;;;;;;;;;;;;;x
