--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1402,3 +1402,4 @@ religious_insurrection;Religious Insurrection;;;;;;;;;;;;;x
 religious_insurrection_desc;Locals are rebelling on blind fate!;;;;;;;;;;;;;x
 neutrality_timer;Neutrality Timer;;;;;;;;;;;;;x
 religious_resurgence;Religious Resurgence;;;;;;;;;;;;;x
+religious_resurgence_desc;We have achieved our religious goals and our faith is resurging as a result.;;;;;;;;;;;;;x
