bug fixes, loc, serfdom, craft buff

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1429,3 +1429,5 @@ decadent_autocracy;Decadent Autocracy;;;;;;;;;;;;;x
 decadent_autocracy_desc;Our Tsarist apparatus is under strenuous pressure to retain Autocracy;;;;;;;;;;;;;x
 caliph_powerless_figurehead;Caliph Powerless Figurhead;;;;;;;;;;;;;x
 border_clashes;Colonist Border Clash;;;;;;;;;;;;;x
+redemption_payments;Redemption Payments;;;;;;;;;;;;;x
+redemption_payments_desc;Former Serf subjects are paying us back the money they borrowed with interest to buy land from aristocracy;;;;;;;;;;;;;x
