--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -245,6 +245,14 @@ padri_war_cb;Padri War;;;;;;;;;;;;;x
 padri_war_cb_desc;Acquire West Sumatra;;;;;;;;;;;;;x
 padri_war_cb_setup;Acquire West Sumatra from $RECIPIENT$;;;;;;;;;;;;;x
 padri_war_cb_short;Acquire West Sumatra;;;;;;;;;;;;;x
+crimean_war_cb;Eastern Crisis;;;;;;;;;;;;;x
+crimean_war_cb_desc;Protect Christians and dominate Ottoman Empire;;;;;;;;;;;;;x
+crimean_war_cb_setup;Protect Christians in Ottoman Empire;;;;;;;;;;;;;x
+crimean_war_cb_short;Russia is Protector of Christians;;;;;;;;;;;;;x
+crimean_war_defender_cb;Eastern Crisis;;;;;;;;;;;;;x
+crimean_war_defender_desc;France is Protector of Christians;;;;;;;;;;;;;x
+crimean_war_defender_setup;Protect Christians in Ottoman Empire;;;;;;;;;;;;;x
+crimean_war_defender_short;France is Protector of Christians;;;;;;;;;;;;;x
 place_in_the_sun;Place in the sun;Une place au soleil;Ein Platz an der Sonne;;;;;;;;;;;x
 place_in_the_sun_desc;Acquire an enemy §Ycolonial state§W;Prendre un §YÉtat colonial§W ennemi;Erobern Sie einen feindlichen §YKolonialstaat§W.;;;;;;;;;;;x
 place_in_the_sun_setup;Acquire colony $STATE$ from $RECIPIENT$;Prendre colonie $STATE$ de $RECIPIENT$;Kolonie $STATE$ von $RECIPIENT$ erwerben;;;;;;;;;;;x
