--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -14,6 +14,7 @@ AGRESSION_CUT_DOWN_TO_SIZE_WAR_NAME_FRA_NGF;The $ORDER$Franco–Prussian War;$ORDE
 AGRESSION_CUT_DOWN_TO_SIZE_WAR_NAME_FRA_PRU;The $ORDER$Franco–Prussian War;$ORDER$ guerre franco-prussienne;$ORDER$Franco-Preussischer Krieg;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_WAR_NAME_RUS_HUN;$ORDER$Russian Intervention in Hungary;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
+AGRESSION_CRIMEAN_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
 AGRESSION_DEMOCRACY_WAR_NAME;$ORDER$$FIRST$ Restoration of $SECOND$ Democracy;;;;;;;;;;;;;x
 AGRESSION_EARLY_WAR_CONCESSION_NAME;$ORDER$War of the $STATE$ Concession;$ORDER$ Guerre de concession de $STATE$;$ORDER$ Krieg der $STATE$-Konzession;;;;;;;;;;;x
 AGRESSION_PUNITIVE_EXPEDITION_WAR_NAME;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;x
@@ -216,6 +217,7 @@ NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME_FRA_NGF;The $ORDER$Franco–Prussian War;$ORDER$ 
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME_FRA_PRU;The $ORDER$Franco–Prussian War;$ORDER$ guerre franco-prussienne;$ORDER$Franco-Preussischer Krieg;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME_RUS_HUN;$ORDER$Russian Intervention in Hungary;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
+NORMAL_CRIMEAN_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
 NORMAL_DEMOCRACY_WAR_NAME;$ORDER$$FIRST$ Restoration of $SECOND$ Democracy;;;;;;;;;;;;;x
 NORMAL_EARLY_WAR_CONCESSION_NAME;$ORDER$War of the $STATE$ Concession;$ORDER$ Guerre de concession de $STATE$;$ORDER$ Krieg der $STATE$-Konzession;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;x
