--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1431,3 +1431,7 @@ caliph_powerless_figurehead;Caliph Powerless Figurhead;;;;;;;;;;;;;x
 border_clashes;Colonist Border Clash;;;;;;;;;;;;;x
 redemption_payments;Redemption Payments;;;;;;;;;;;;;x
 redemption_payments_desc;Former Serf subjects are paying us back the money they borrowed with interest to buy land from aristocracy;;;;;;;;;;;;;x
+population_20mil;Population: 20 Million, Coffers: 1,000,000;;;;;;;;;;;;;x
+population_40mil;Population: 40 Million, Coffers: 5,000,000;;;;;;;;;;;;;x
+population_80mil;Population: 80 Million, Coffers: 10,000,000;;;;;;;;;;;;;x
+population_360mil;Population: 360 Million, Coffers: 15,000,000;;;;;;;;;;;;;x
