--- a/TGC/localisation/00_goods.csv
+++ b/TGC/localisation/00_goods.csv
@@ -53,3 +53,5 @@ tropical_wood;Tropical Wood;;;;;;;;;;;;;x
 wine;Wine;;;;;;;;;;;;;x
 wool;Wool;;;;;;;;;;;;;x
 precious_metal_desc;Precious metals like Gold and Silver can be converted straight into money.;;;;;;;;;;;;;;x
+pharmaceuticals;Pharmaceuticals;;;;;;;;;;;;;x
+soap;Soap;;;;;;;;;;;;;x
