--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1435,3 +1435,5 @@ population_20mil;Population: 20 Million, Coffers: 1,000,000;;;;;;;;;;;;;x
 population_40mil;Population: 40 Million, Coffers: 5,000,000;;;;;;;;;;;;;x
 population_80mil;Population: 80 Million, Coffers: 10,000,000;;;;;;;;;;;;;x
 population_360mil;Population: 360 Million, Coffers: 15,000,000;;;;;;;;;;;;;x
+goloty_i_glodomerji;Goloty i Glodomerji;;;;;;;;;;;;;x
+goloty_i_glodomerji_desc;Dubbed locally as Kingdom of Bareness and Starvation, this region is one of the poorest and most backward in Europe;;;;;;;;;;;;;x
