--- a/TGC/localisation/00_tech-invent.csv
+++ b/TGC/localisation/00_tech-invent.csv
@@ -1229,3 +1229,5 @@ silicon_steel;Silicon Steel;;;;;;;;;;;;;x
 silicon_steel_desc;Silicon steel is an alloy of iron, carbon, and silicon, and is known for its magnetic properties.;;;;;;;;;;;;;x
 police_state;The Police State;;;;;;;;;;;;;x
 police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
+logical_investigations;Logical Investigations;;;;;;;;;;;;;x
+logical_investigations_desc;Logical Investigations is a book written by the philosopher Edmund Husserl. The book is considered to be one of the most important works in the field of phenomenology, which is the study of consciousness and experience. In the book, Husserl develops his theory of intentionality, which is the idea that all consciousness is directed towards something or has an object.;;;;;;;;;;;;;x
