--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -371,11 +371,17 @@ advanced_polymers;Large Scale Polymer Production;;;;;;;;;;;;;x
 advanced_polymers_desc;Large Scale Polymer Production;;;;;;;;;;;;;x
 modernism;Modernism;;;;;;;;;;;;;x
 modernism_desc;Modernism;;;;;;;;;;;;;x
-ontology;Ontology;;;;;;;;;;;;;x
-ontology_desc;Ontology;;;;;;;;;;;;;x
+ontology;Formal Ontology;;;;;;;;;;;;;x
+ontology_desc;Formal Ontology;;;;;;;;;;;;;x
 social_psychology;Social Psychology;;;;;;;;;;;;;x
 social_psychology_desc;Social Psychology;;;;;;;;;;;;;x
 the_police_state;Polizeistaat;;;;;;;;;;;;;x
 the_police_state_desc;Why is it you only see a policeman when you don’t need one?;;;;;;;;;;;;;x
 psychodynamics;Psychodynamics;;;;;;;;;;;;;x
 psychodynamics_desc;Psychodynamics;;;;;;;;;;;;;x
+hedge_funds;Hedge Funds;;;;;;;;;;;;;x
+hedge_funds_desc;Hedge Funds;;;;;;;;;;;;;x
+federal_reserve_system;Federal Reserve System;;;;;;;;;;;;;x
+federal_reserve_system_desc;Federal Reserve System;;;;;;;;;;;;;x
+inflation_targeting;Inflation targeting;;;;;;;;;;;;;x
+inflation_targeting_desc;Inflation targeting;;;;;;;;;;;;;x
