--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -182,6 +182,8 @@ AGRESSION_WAR_TREATY_SIGNING;$FIRST$-$SECOND$ Treaty Negotiations;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_ANNEX_NAME;$ORDER$ $FIRST$ Liberation of $SECOND_COUNTRY$;$ORDER$ $FIRST$ libération de $SECOND_COUNTRY$;$ORDER$ $FIRST$ Befreiung von $SECOND_COUNTRY$;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME;$ORDER$ $FIRST$ Liberation of $STATE$;$ORDER$$FIRST$ libération de $STATE$;$ORDER$$FIRST$ Befreiung von $STATE$;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME_NGF_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
+AGRESSION_WAR_UNIFICATION_NAME_PRU_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
+AGRESSION_WAR_UNIFICATION_NAME_AUS_DEN;The 2nd Schleswig War;;;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME_SAR_AUS;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 AGRESSION_WAR_UNIFICATION_NAME_SAR_KUK;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 AGRESSION_WAR_WEBSTER_ASHBURTON;The Aroostook War;;;;;;;;;;;;;x
