--- a/TGC/localisation/00_events_10000000.csv
+++ b/TGC/localisation/00_events_10000000.csv
@@ -315,8 +315,11 @@ EVT666666122OPTA;Hurray!;;;;;;;;;x
 EVTNAME666666123;Uprising in $FROMCOUNTRY$;;;;;;;;;x
 EVTDESC666666123;Our fellow Poles in $FROMCOUNTRY$ have risen up in arms against their oppressors!;;;;;;;;;x
 EVT666666123OPTA;Interesting...;;;;;;;;;x
+EVT666666123OPTB;Kurwa, what are we waiting for?! TO ARMS!!!! §R-War will start in 30 days-;;;;;;;;;x
 EVTNAME666666124;Uprising in $FROMCOUNTRY$;;;;;;;;;x
 EVTDESC666666124;There is trouble brewing in $FROMCOUNTRY$! $FROMCOUNTRY$ is ready to dispatch additional police and military units to clamp down on the disorder. We should monitor what goes on with our Polish brethren here closely!;;;;;;;;;x
+EVTDESC666666126;The $YEAR$ Polish Rebellion was a major uprising against imperial rule in Poland. The rebellion was largely led by members of the szlachta, the Polish nobility, and was supported by other members of the Polish population. It was triggered by a series of edicts that sought to limit the privileges and autonomy of the Polish people. The uprising was largely unsuccessful and led to an increased presence of Russian troops in Poland. In the end, the rebellion solidified Russia's control of Poland, with Tsar Alexander II enforcing a series of reforms that limited the autonomy of the Polish people even further. However, the rebellion served as a reminder of the Polish people's resilience and refusal to accept imperial rule.;;;;;;;;;x
+EVT666666126OPTA;Onwards to Free Poland!;;;;;;;;;x
 EVT666666124OPTA;Interesting...;;;;;;;;;x
 EVT666666009OPTA;We shall see... To arms!;;;;;;;;;x
 EVT666666009OPTB;Sadly, there is nothing we can do at the moment...;;;;;;;;;x
