--- a/TGC/localisation/00_technology.csv
+++ b/TGC/localisation/00_technology.csv
@@ -381,7 +381,7 @@ psychodynamics;Psychodynamics;;;;;;;;;;;;;x
 psychodynamics_desc;Psychodynamics;;;;;;;;;;;;;x
 hedge_funds;Hedge Funds;;;;;;;;;;;;;x
 hedge_funds_desc;Hedge Funds;;;;;;;;;;;;;x
-federal_reserve_system;Federal Reserve System;;;;;;;;;;;;;x
-federal_reserve_system_desc;Federal Reserve System;;;;;;;;;;;;;x
+federal_reserve_system;Open Market Operations;;;;;;;;;;;;;x
+federal_reserve_system_desc;Open Market Operations;;;;;;;;;;;;;x
 inflation_targeting;Inflation targeting;;;;;;;;;;;;;x
 inflation_targeting_desc;Inflation targeting;;;;;;;;;;;;;x
