should be fixed now

--- a/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
+++ b/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
@@ -1,19 +1,22 @@
 CODE;ENGLISH;FRENCH;GERMAN;POLISH;SPANISH;ITALIAN;SWEDISH;CZECH;HUNGARIAN;DUTCH;PORTUGUESE;RUSSIAN;FINNISH;x
-override_activate_immigration_desc;Building province selectors will force people to move out of the province towards provinces with an immigrator. Decisions can be used to manipulate whether accepted pops or non-accepted pops will move, and whether to colonial or non-colonial provinces. Beware though: Province selector maximum is FIVE buildings at any one time. When province selectors are active, the population will quickly grow rebellious, and the economy in expulsion regions will come to a grinding halt.;;;;;;;;;;;;;x
+override_activate_immigration_desc;Building province selectors will force people to move out of the province towards provinces with an immigrator. Decisions can be used to manipulate whether accepted pops or non-accepted pops will move, and whether to colonial or non-colonial provinces. Beware though: Province selector maximum is §RFIVE§! buildings at any one time. When province selectors are active, the population will quickly grow rebellious, and the economy in expulsion regions will come to a grinding halt.;;;;;;;;;;;;;x
 override_activate_immigration_title;Start a Direct Immigration Campaign;;;;;;;;;;;;;x
-override_direct_immigration_move_primary_pops_desc;Configure the Direct Immigration mechanic to move PRIMARY pops. You are currently focusing NON ACCEPTED pops.;;;;;;;;;;;;;x
+override_direct_immigration_move_primary_pops_desc;Configure the Direct Immigration mechanic to move §RPRIMARY§! pops. You are currently focusing §GNON ACCEPTED§! pops.;;;;;;;;;;;;;x
 override_direct_immigration_move_primary_pops_title;Direct Immigration: Move Primary Pops;;;;;;;;;;;;;x
-override_direct_immigration_move_accepted_pops_desc;Configure the Direct Immigration mechanic to move ACCEPTED pops. You you are currently focusing PRIMARY pops.;;;;;;;;;;;;;x
+override_direct_immigration_move_accepted_pops_desc;Configure the Direct Immigration mechanic to move §RACCEPTED§! pops. You you are currently focusing §GPRIMARY§! pops.;;;;;;;;;;;;;x
 override_direct_immigration_move_accepted_pops_title;Direct Immigration: Move Accepted Pops;;;;;;;;;;;;;x
-override_direct_immigration_move_non_accepted_pops_desc;Configure the Direct Immigration mechanic to move NON-ACCEPTED pops. You are currently focusing ACCEPTED pops.;;;;;;;;;;;;;x
+override_direct_immigration_move_non_accepted_pops_desc;Configure the Direct Immigration mechanic to move §RNON-ACCEPTED§! pops. You are currently focusing §GACCEPTED§! pops.;;;;;;;;;;;;;x
 override_direct_immigration_move_non_accepted_pops_title;Direct Immigration: Move Non-Accepted Pops;;;;;;;;;;;;;x
-override_direct_immigration_move_not_state_religion_desc;Configure the Direct Immigration mechanic to move pops that are NOT your state religion. WARNING: Do not use this in combination with culture decisions above (keep focus at non-accepted).;;;;;;;;;;;;;x
+override_direct_immigration_move_not_state_religion_desc;Configure the Direct Immigration mechanic to move pops that are §RNOT your state religion§!. §RWARNING: Do not use§! this in combination with culture decisions above (keep focus at non-accepted).;;;;;;;;;;;;;x
 override_direct_immigration_move_not_state_religion_title;Direct Immigration: Move Non-Accepted Religion;;;;;;;;;;;;;x 
 override_direct_immigration_move_not_state_religion_disable_desc;Configure the Direct Immigration mechanic to stop moving not accepted religion.;;;;;;;;;;;;;x
 override_direct_immigration_move_not_state_religion_disable_title;Direct Immigration: Stop the Religious campaign;;;;;;;;;;;;;x 
-override_direct_immigration_move_pops_internally_desc;Configure the Direct Immigration mechanic to move pops to non-colonial provinces. You are currently focusing on state to COLONIAL province migration.;;;;;;;;;;;;;x
+override_direct_immigration_move_pops_internally_desc;Configure the Direct Immigration mechanic to move pops to §Rnon-colonial§! provinces. You are currently focusing on state to §GCOLONIAL§! province migration.;;;;;;;;;;;;;x
 override_direct_immigration_move_pops_internally_title;Direct Immigration: Move Pops Internally;;;;;;;;;;;;;x
-override_direct_immigration_move_pops_to_colonies_desc;Configure the Direct Immigration mechanic to move pops to colonial provinces. You are currently focusing state to STATE (internal) migration.;;;;;;;;;;;;;x
+override_direct_immigration_move_pops_to_colonies_desc;Configure the Direct Immigration mechanic to move pops to §Rcolonial§! provinces. You are currently focusing state to §GSTATE§! (internal) migration.;;;;;;;;;;;;;x
 override_direct_immigration_move_pops_to_colonies_title;Direct Immigration: Move Pops to Colonies;;;;;;;;;;;;;x
 override_immigrant_options_desc;Select the options that you want for immigration!;;;;;;;;;;;;;x
 override_immigrant_options_title;Immigration Options;;;;;;;;;;;;;x
+direct_immigration_program;Direct Migration Campaign Active;;;;;;;;;;;;;x
+lingering_effects_DI;Lingering Effects of Colonization;;;;;;;;;;;;;x
+lingering_effects_DI_desc;This province has recently seen a number of people moved to it by force.;;;;;;;;;;;;;x
