--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -414,7 +414,7 @@ EVTOPTA500286;That man is a Hero! Invite him to the Winter Palace!;;;;;;;;;;;;;x
 EVTNAME500287;The Aftermath;;;;;;;;;;;;;x
 EVTDESC500287;“I felt sad and sore, because my people were dying, and so I decided to destroy the evil Tsar and die for my dear people myself,” a proclamation found in the pocket of the shooter, Dmitry Karakozov, read. As he was caught by the crowd, the Emperor asked him: “Why did you try to shoot me?” “You fooled your people – you promised them land, but didn’t give it to them,” Karakozov replied, referring to the abolition of serfdom that happened in 1861, whereupon the peasants had then to buy out their lands from the state. Karakozov turned out to be a member of a terrorist circle, and planned to start a revolution with his murder. Karakozov was put on trial and executed later in September 1866, while the Tsar’s savior, Osip Komissarov, was granted hereditary nobility. The very evening of the day he saved the Emperor, Komissarov was honored at the Winter Palace, hugged and greeted by Alexander II.;;;;;;;;;;;;;x
 EVTOPTA500287;I fooled my people... h-have I? Is he right?.. Have I betrayed my promise?;;;;;;;;;;;;;x
-EVTOPTB500287;No, it is the people who have fooled me!c
+EVTOPTB500287;No, it is the people who have fooled me!;;;;;;;;;;;;;x
 EVTNAME500288;Autocratic Regime Decays Further;;;;;;;;;;;;;x
 EVTDESC500288;We have held our ground well so far, despite all the cracks and pressures. However, now we remain the sole Autocracy in Europe, and our people are getting restless over their lack of freedom, poverty and government incompetency.;;;;;;;;;;;;;x
 EVTOPTA500288;We will not abandon the Mandate given to us by God;;;;;;;;;;;;;x
