--- a/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
+++ b/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
@@ -17,6 +17,11 @@ override_direct_immigration_move_pops_to_colonies_desc;Configure the Direct Immi
 override_direct_immigration_move_pops_to_colonies_title;Direct Immigration: Move Pops to Colonies;;;;;;;;;;;;;x
 override_immigrant_options_desc;Select the options that you want for immigration!;;;;;;;;;;;;;x
 override_immigrant_options_title;Immigration Options;;;;;;;;;;;;;x
-direct_immigration_program;Direct Migration Campaign Active;;;;;;;;;;;;;x
+override_start_direct_assimilation;Start an Assimilation Campaign;;;;;;;;;;;;;x
+override_start_direct_assimilation_desc;This will allow you to target a specific state and attempt to assimilate cultures there, regardless of cores, for a period of 5 years;;;;;;;;;;;;;x
+direct_immigration_program;Recent Direct Migration Campaign;;;;;;;;;;;;;x
+direct_immigration_program_desc;We've recently had a migration campaign;;;;;;;;;;;;;x
 lingering_effects_DI;Lingering Effects of Colonization;;;;;;;;;;;;;x
 lingering_effects_DI_desc;This province has recently seen a number of people moved to it by force.;;;;;;;;;;;;;x
+assimilation_campaign_in_progress;Recent Assimilation Campaign;;;;;;;;;;;;;x
+assimilation_campaign_in_progress_desc;Recently undertook an Assimilation Campaign;;;;;;;;;;;;;x
